Fixed overflow issue on mobile on news archive.  Removed unnecessary 0 font size for hidden text.
A font size of 0 can negatively impact SEO; see https://www.seoquake.com/blog/hidden-text-and-search-engines/

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,7 +30,6 @@ p {
 	margin-bottom: 0.75rem;
 }
 .hideText {
-	font-size: 0px;
 	overflow: hidden;
 	text-indent: 100%;
 }
@@ -80,6 +79,7 @@ p {
 	background-size: contain;
 	margin: auto;
 	max-width: var(--maxWidth);
+	overflow: hidden;
 }
 .hr {
 	background-image: url('/media/separator.jpg');
